minikube-local/k8s-local/vault/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  namespace: infras-vault
  labels:
    app: vault
    component: core
spec:
  serviceName: vault-headless
  replicas: 1
  selector:
    matchLabels:
      app: vault
      component: core
  template:
    metadata:
      labels:
        app: vault
        component: core
    spec:
      serviceAccountName: vault
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 100
      containers:
      - name: vault
        image: hashicorp/vault:1.15.2
        command:
          - "vault"
          - "server"
          - "-config=/etc/vault/config.hcl"
        imagePullPolicy: IfNotPresent
        securityContext:
          capabilities:
            add:
              - IPC_LOCK
        ports:
        - name: http
          containerPort: 8200
          protocol: TCP
        - name: cluster-addr
          containerPort: 8201
          protocol: TCP
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - name: vault-config
          mountPath: /etc/vault
          readOnly: true
        - name: vault-data
          mountPath: /vault/file
        livenessProbe:
          httpGet:
            path: /v1/sys/health
            port: 8200
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /v1/sys/health
            port: 8200
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 2
      volumes:
      - name: vault-config
        configMap:
          name: vault-config
  volumeClaimTemplates:
  - metadata:
      name: vault-data
      labels:
        app: vault
        component: core
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: standard
      resources:
        requests:
          storage: 10Gi
